{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 260,
  "lineage": "73dfa070-c41e-8323-6e83-ba5bc042ef8c",
  "resources": [
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09120609cbc087520",
            "domain": "vpc",
            "id": "eipalloc-09120609cbc087520",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-243-35-229.compute-1.amazonaws.com",
            "public_ip": "54.243.35.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:internet-gateway/igw-00bece153de4fb66f",
            "id": "igw-00bece153de4fb66f",
            "owner_id": "339772204487",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            }
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09120609cbc087520",
            "connectivity_type": "public",
            "id": "nat-0436d85d9481bbffe",
            "network_interface_id": "eni-07d6576ae96c16b62",
            "private_ip": "10.0.75.195",
            "public_ip": "54.243.35.229",
            "subnet_id": "subnet-0b0594d192e3f588a",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.eks-cluster.aws_eip.nat",
            "module.eks-cluster.aws_subnet.public-subnet",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:route-table/rtb-05dfa843d2e202699",
            "id": "rtb-05dfa843d2e202699",
            "owner_id": "339772204487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0436d85d9481bbffe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ebd86807da7f864"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_eip.nat",
            "module.eks-cluster.aws_nat_gateway.nat-gateway",
            "module.eks-cluster.aws_subnet.public-subnet",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:route-table/rtb-02ae9d0d2a8cd6a8f",
            "id": "rtb-02ae9d0d2a8cd6a8f",
            "owner_id": "339772204487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00bece153de4fb66f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ebd86807da7f864"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_internet_gateway.internet-gateway",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9d2a01bbf914f10",
            "route_table_id": "rtb-05dfa843d2e202699",
            "subnet_id": "subnet-0be5a0b9e3f92ec43"
          },
          "dependencies": [
            "module.eks-cluster.aws_eip.nat",
            "module.eks-cluster.aws_nat_gateway.nat-gateway",
            "module.eks-cluster.aws_route_table.private",
            "module.eks-cluster.aws_subnet.private-subnet",
            "module.eks-cluster.aws_subnet.public-subnet",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00812091893267ab1",
            "route_table_id": "rtb-05dfa843d2e202699",
            "subnet_id": "subnet-0197b5193279f016a"
          },
          "dependencies": [
            "module.eks-cluster.aws_eip.nat",
            "module.eks-cluster.aws_nat_gateway.nat-gateway",
            "module.eks-cluster.aws_route_table.private",
            "module.eks-cluster.aws_subnet.private-subnet-2",
            "module.eks-cluster.aws_subnet.public-subnet",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b28a2b3e98dfe8d9",
            "route_table_id": "rtb-02ae9d0d2a8cd6a8f",
            "subnet_id": "subnet-0b0594d192e3f588a"
          },
          "dependencies": [
            "module.eks-cluster.aws_internet_gateway.internet-gateway",
            "module.eks-cluster.aws_route_table.public",
            "module.eks-cluster.aws_subnet.public-subnet",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9cf519f6db3f30b",
            "route_table_id": "rtb-02ae9d0d2a8cd6a8f",
            "subnet_id": "subnet-0a6ce252f83c86552"
          },
          "dependencies": [
            "module.eks-cluster.aws_internet_gateway.internet-gateway",
            "module.eks-cluster.aws_route_table.public",
            "module.eks-cluster.aws_subnet.public-subnet-2",
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:subnet/subnet-0be5a0b9e3f92ec43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be5a0b9e3f92ec43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339772204487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01ebd86807da7f864"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:subnet/subnet-0197b5193279f016a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0197b5193279f016a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339772204487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01ebd86807da7f864"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:subnet/subnet-0b0594d192e3f588a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0594d192e3f588a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339772204487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01ebd86807da7f864"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:subnet/subnet-0a6ce252f83c86552",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6ce252f83c86552",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339772204487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01ebd86807da7f864"
          },
          "dependencies": [
            "module.eks-cluster.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:vpc/vpc-01ebd86807da7f864",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01964486729882881",
            "default_route_table_id": "rtb-02339e894fe32d20c",
            "default_security_group_id": "sg-00ce2d66058d088f4",
            "dhcp_options_id": "dopt-0a941d81102e68b3c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ebd86807da7f864",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02339e894fe32d20c",
            "owner_id": "339772204487",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks-fargate",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:subnet/subnet-0be5a0b9e3f92ec43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be5a0b9e3f92ec43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339772204487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01ebd86807da7f864"
          }
        }
      ]
    },
    {
      "module": "module.eks-fargate",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339772204487:subnet/subnet-0197b5193279f016a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 8186,
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0197b5193279f016a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339772204487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/eks-cluster-cloud": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01ebd86807da7f864"
          }
        }
      ]
    }
  ]
}